Split up executor tests into multiple files
Split up tests/executor.cpp into files according to the instruction
type. tests/executor.cpp was kept and includes tests on the executor
itself.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -14,7 +14,13 @@ add_executable(mips_emulator_tests
 	
 	register_file.cpp
 	instruction.cpp
+
+	# Executor
 	executor.cpp
+	executor/rtype.cpp
+	executor/itype.cpp
+	executor/jtype.cpp
+	executor/special3.cpp
 )
 
 target_link_libraries(mips_emulator_tests
